examples/bad/00-BadHello.tms
int main () {
  printString("hello worl"d) ;
  return 0 ;
}